23_power_rec/grade.txt
Grading at Thu Feb 21 08:39:26 UTC 2019
Attempting to compile power.c
power.c: In function ‘power_helper’:
power.c:11:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
